<resources>
    <string name="app_name">JV</string>
    <string name="hesab_yarat">Hesab Yarat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_permission">Mən İstifadəçi Şərtləri və Qaydaları ilə razıyam</string>
    <string name="sign_button_txt">Qeydiyyatdan keç</string>
    <string name="phone_number">Phone number</string>
    <string name="register_string">Hesabın yoxdur? Qeydiyyatdan keç</string>
    <string name="forgetPass">Şifrəni unutmusan?</string>
    <string name="signInButtonText">Daxil ol</string>
    <string name="signIn_RegisterUI">Artıq hesabın var? Daxil ol</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="scroll_instruction">Davam etmək üçün bütün şərtləri oxuyun</string>
    <string name="register_ButtonText">Qeydiyyatdan Keç</string>
    <string name="name_surname">Name,Surname</string>
</resources>